# aareguru-mcp

./: .dockerignore  .env.example  .gitignore  .mcpb  .pre-commit-config.yaml  ARCHITECTURE.md  AWS_APP_RUNNER_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_CONFIG.md  CLAUDE_DESKTOP_INTEGRATION_PLAN.md  CLAUDE_DESKTOP_SETUP.md  CONSTITUTION.md  DEBUG_APPS.md  DOCKER.md  DOCUMENTATION_UPDATE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.txt  FULL_SSE_IMPLEMENTATION.md  HTTP_STREAMING_PLAN.md  IMPLEMENTATION_PLAN.md  LICENCE.md  MASTER_PLAN.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PRIVACY.md  README.md  RELEASE_NOTES_CONCISE_v4.2.0.md  RELEASE_NOTES_v4.2.0.md  SKILLS.md  SSE_DESIGN_SUMMARY.md  STRUCTURED_LOGGING.md  TESTING_PLAN.md  USER_QUESTIONS_SLIDES.md  aareguru-mcp.mcpb  aareguru_postman_collection.json  claude_desktop_config.json  claude_desktop_remote_config.json  coverage.json  debug_all_apps.py  (+14 more)
.fastmcp/: config.yaml
.github/ISSUE_TEMPLATE/: feature_request_mcp_sampling.md
.github/workflows/: deploy-validation.yml  test.yml
docs/: AAREGURU_API_ANALYSIS.md  DEPLOYMENT.md  DOCKER.md  ELICITATION_CLARIFICATION.md  FULL_SSE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  MASTER_PLAN.md  MCP_ELICITATION_EXAMPLES.md  PERFORMANCE_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  PROMPT_ARGS_INVESTIGATION.md  RELEASE_NOTES_v4.5.0.md  RELEASE_NOTES_v4.6.0.md  RELEASE_NOTES_v4.7.0.md  RELEASE_NOTES_v4.7.1.md  RELEASE_NOTES_v4.7.2.md  RELEASE_NOTES_v4.7.3.md  TESTING_PLAN.md  TOOL_DESIGN_ANALYSIS.md  USER_QUESTIONS_SLIDES.md
scripts/: README.md  test_mcp_http.py
specs/: ADR_COMPENDIUM.md
src/aareguru_mcp/: __init__.py  __main__.py  apps.py  client.py  config.py  helpers.py  http_server.py  metrics.py  models.py  prompts.py  rate_limit.py  resources.py  server.py  service.py  shop_client.py  shop_models.py  shop_service.py  tools.py
src/aareguru_mcp/apps/: __init__.py  _constants.py  _helpers.py  _i18n.py  _skeletons.py  city_finder.py  compare.py  conditions.py  conditions_debug.py  conditions_flow.py  conditions_sun.py  conditions_temperature.py  conditions_weather.py  forecast.py  history.py  intraday.py  map.py  safety.py  shop.py  shop_product.py
tests/: conftest.py  test_advanced_tools.py  test_apps.py  test_apps_map.py  test_city_and_history.py  test_client.py  test_client_edge_cases.py  test_complex_flows.py  test_config.py  test_coverage_gaps.py  test_e2e_conversations.py  test_http_endpoints.py  test_http_server.py  test_i18n.py  test_integration_workflows.py  test_mcp_inspector_scenarios.py  test_metrics_and_rate_limit.py  test_models.py  test_parallel_tools.py  test_prompt_typed_args.py  test_prompts.py  test_resources.py  test_resources_new.py  test_server.py  test_service_error_paths.py  test_sse_integration.py  test_tool_integration.py  test_tools.py  test_tools_advanced.py  test_tools_basic.py  test_tools_shop.py  test_unit_client.py  test_unit_config.py  test_unit_metrics.py  test_unit_models.py  test_unit_rate_limit.py  test_unit_server_helpers.py  test_ux_features.py
tests/fixtures/: sample_responses.json
