[project]
name = "aareguru-mcp"
version = "3.1.0"
description = "MCP server for Aareguru API - Swiss Aare river data"
authors = [
    {name = "Andreas Schlapbach", email = "schlpbch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",        # Structured logging
    "slowapi>=0.1.9",           # Rate limiting
    "prometheus-client>=0.20.0", # Metrics and monitoring
    "swiss-ai-mcp-commons @ git+https://github.com/schlpbch/swiss-ai-mcp-commons.git@master",
]

[project.scripts]
aareguru-mcp = "aareguru_mcp.server:entry_point"
aareguru-mcp-http = "aareguru_mcp.server:run_http"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806"]  # Allow uppercase variable names (common for MockClient in tests)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]  # Allow mock naming conventions in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests (may hit real API)",
    "e2e: End-to-end conversation tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=aareguru_mcp",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]
