[project]
name = "aareguru-mcp"
version = "4.3.0"
description = "MCP server for Aareguru API - Swiss Aare river data"
authors = [
    {name = "Andreas Schlapbach", email = "schlpbch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "swiss-ai-mcp-commons @ git+https://github.com/schlpbch/swiss-ai-mcp-commons.git@v1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aareguru-mcp = "aareguru_mcp.server:entry_point"
aareguru-mcp-http = "aareguru_mcp.server:run_http"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806"]  # Allow uppercase variable names (common for MockClient in tests)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]  # Allow mock naming conventions in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests (may hit real API)",
    "e2e: End-to-end conversation tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=aareguru_mcp",
]
